fixed a bug with profile pic not showing on profile page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -114,12 +114,12 @@ a:hover {
 }
 
 /* profile pic styling */
-.avatar {
+/* .avatar {
     vertical-align: middle;
     width: 50px;
     height: 50px;
     border-radius: 50%;
-}
+} */
 
 .comment-form {
     margin: 1em;
@@ -130,4 +130,19 @@ a:hover {
 
 .comment-control {
     display: flex;
+}
+
+.profile-pic {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
+.post-header-container{
+    display: flex;
+    margin-bottom: 15px;
+}
+
+.post-header-info {
+    margin-left: 10px;
 }
